@@ -1,6 +1,11 @@
 CHANGES
 =======
 
+* Userdata template was now an option
+* Fixes respawn of notebooks after kill -9 on jhub
+* Cleaning some comment
+* Start working with autodoc and pbr
+
 1.1a1
 -----
 
